--- a/tasksdb.json
+++ b/tasksdb.json
@@ -1,6 +1,16 @@
 {
-    "tasks": [{
-        "id": 1,
-        "task": "zakupy"
-    }]
+  "tasks": [
+    {
+      "task": "zakupy",
+      "id": 1
+    },
+    {
+      "task": "umyć domy",
+      "id": 2
+    },
+    {
+      "{\"task\":\"test\",\"id\":1}": "",
+      "id": 3
+    }
+  ]
 }
